# voice_to_text

./: .gitignore  README.md  pyproject.toml
backend/: requirements.txt
backend/app/: main.py  test_embedding.py
backend/app/api/: analytics.py  chat.py  insight.py  job.py  meeting.py  search.py  upload.py  ws.py
backend/app/db/: database.py  init_db.py  session.py
backend/app/models/: action_item.py  analysis.py  chat_history.py  key_point.py  meeting.py  meeting_chunk.py  processing_job.py  transcript.py
backend/app/schemas/: InsightOutput.py  analytics_overview_response.py  insight.py  meeting_analysis.py  meeting_detail_response.py  meeting_response.py
backend/app/services/: JobService.py  analysis_service.py  analytics_service.py  chat_service.py  chunking_service.py  embedding_service.py  insight_service.py  llm_service.py  meeting_service.py  search_service.py  transcription_service.py  websocket_manager.py
backend/app/workers/: meeting_worker.py
frontend/: package-lock.json  package.json
frontend/firebase/: auth.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/insights/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: ai-orb-3d.tsx  analytics-cards.tsx  audio-wave.tsx  auth-guard.tsx  dashboard-layout.tsx  logout-button.tsx  meeting-card.tsx  sidebar.tsx
frontend/src/lib/: allowed-emails.ts  analytics.ts  api.ts  websocket.ts
frontend/src/types/: analytics.ts  meeting.ts  transcription.ts
(+5 files in other folders)
